--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -325,7 +325,7 @@
     <ClInclude Include="..\..\..\sonia\bang\functional\general\equal_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\error_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\is_const_pattern.hpp" />
-    <ClInclude Include="..\..\..\sonia\bang\functional\general\mut_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\functional\general\runtime_cast_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\negate_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\to_string_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\typeof_pattern.hpp" />
@@ -891,7 +891,7 @@
     <ClCompile Include="..\..\..\sonia\bang\functional\general\equal_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\error_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\is_const_pattern.cpp" />
-    <ClCompile Include="..\..\..\sonia\bang\functional\general\mut_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\functional\general\runtime_cast_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\negate_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\to_string_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\typeof_pattern.cpp" />
