--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -258,8 +258,11 @@
     <ClInclude Include="..\..\..\sonia\bang\bang.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\bang.tab.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\bang.yy.hpp" />
-    <ClInclude Include="..\..\..\sonia\bang\entities\collections\array_elements_implicit_cast_pattern.hpp" />
-    <ClInclude Include="..\..\..\sonia\bang\entities\collections\array_implicit_cast_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\array\array_elements_implicit_cast_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\array\array_head_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\array\array_implicit_cast_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\array\array_make_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\array\array_tail_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\ellipsis\ellipsis_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\enum\enum_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\enum\enum_implicit_cast_pattern.hpp" />
@@ -309,13 +312,16 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\union\union_bit_or_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\union\union_implicit_cast_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\variable_entity.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\vector\vector_make_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors\assign_error.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\errors\cast_error.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors\circular_dependency_error.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors\function_call_match_error.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors\identifier_redefinition_error.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors\no_position_argument_error.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors\pattern_match_error.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\errors\signature_name_mismatch_error.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors\type_mismatch_error.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors\utility.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors\value_mismatch_error.hpp" />
@@ -787,8 +793,11 @@
     <ClCompile Include="..\..\..\sonia\bang\bang_errors.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\bang_semantic.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\bang_unit.cpp" />
-    <ClCompile Include="..\..\..\sonia\bang\entities\collections\array_elements_implicit_cast_pattern.cpp" />
-    <ClCompile Include="..\..\..\sonia\bang\entities\collections\array_implicit_cast_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\array\array_elements_implicit_cast_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\array\array_head_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\array\array_implicit_cast_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\array\array_make_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\array\array_tail_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\ellipsis\ellipsis_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\enum\enum_entity.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\enum\enum_implicit_cast_pattern.cpp" />
@@ -878,12 +887,15 @@
     <ClCompile Include="..\..\..\sonia\bang\entities\union\union_bit_or_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\union\union_implicit_cast_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\variable_entity.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\vector\vector_make_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\assign_error.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\errors\cast_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\circular_dependency_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\function_call_match_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\identifier_redefinition_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\no_position_argument_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\pattern_match_error.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\errors\signature_name_mismatch_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\type_mismatch_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\value_mismatch_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\basic_fn_pattern.cpp" />
