--- a/projects/cmake/sonia-prime-lib/CMakeLists.txt
+++ b/projects/cmake/sonia-prime-lib/CMakeLists.txt
@@ -1,8 +1,9 @@
 include (${COMMON_INCLUDE})
 
 include_directories(${PROJECT_HOME})
-include_directories(${BUNDLES})
 include_directories(${BUNDLES}/sonia-prime)
+include_directories(${BUNDLES}/numetron/include)
+include_directories(${BUNDLES}/dataforge/include)
 include_directories(${TPLS}/lexertl14/include)
 
 set (BUNDLE_NAME sonia-prime-lib)
@@ -21,104 +22,7 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/fibers/barrier.cpp
     ${BUNDLE_HOME}/sonia/fibers/algo/algorithm.cpp
     ${BUNDLE_HOME}/sonia/fibers/algo/round_robin.cpp
-    ${BUNDLE_HOME}/sonia/bang/bang.cpp
-    ${BUNDLE_HOME}/sonia/bang/bang.tab.cpp
-    ${BUNDLE_HOME}/sonia/bang/bang.yy.cpp
-    ${BUNDLE_HOME}/sonia/bang/bang_errors.cpp
-    ${BUNDLE_HOME}/sonia/bang/bang_parser.cpp
-    ${BUNDLE_HOME}/sonia/bang/bang_semantic.cpp
-    ${BUNDLE_HOME}/sonia/bang/bang_unit.cpp
-    ${BUNDLE_HOME}/sonia/bang/bang_auxiliary.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/assign_expression_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/base_expression_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/ct_expression_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/declaration_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/expression_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/fn_compiler_context.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/functional_declaration_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/functional.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/prepared_call.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/type_entity.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/variable_entity.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/collections/array_elements_implicit_cast_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/collections/array_implicit_cast_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/ellipsis/ellipsis_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/enum/enum_entity.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/enum/enum_implicit_cast_pattern.cpp
-
-    ${BUNDLE_HOME}/sonia/bang/entities/functions/expression_resolver.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/functions/function_entity.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/functions/internal_function_entity.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/literals/numeric_implicit_cast_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/literals/const_literal_implicit_cast_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/literals/string_concat_pattern.cpp
-
-    #${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_argument_pattern.cpp
-    #${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_bit_and_pattern.cpp
-    #${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_empty_pattern.cpp
-    #${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_head_pattern.cpp
-    #${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_pattern.cpp
-    #${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_tail_pattern.cpp
-    #${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_typeof_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_entity.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_fn_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_get_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_implicit_cast_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_init_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_new_pattern.cpp
-
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_empty_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_get_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_head_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_make_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_implicit_cast_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_pattern_base.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_set_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_size_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_tail_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_equal_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_project_get_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_project_size_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_typename_get_pattern.cpp
-
-    ${BUNDLE_HOME}/sonia/bang/entities/union/union_bit_or_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/union/union_implicit_cast_pattern.cpp
-
-    ${BUNDLE_HOME}/sonia/bang/functional/basic_fn_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/internal_fn_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/external_fn_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/signature_matcher.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/pattern_matcher.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/parameter_matcher.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/value_match_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/value_type_match_visitor.cpp
-
-    ${BUNDLE_HOME}/sonia/bang/functional/general/assert_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/general/create_identifier_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/general/deref_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/general/equal_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/general/error_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/general/is_const_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/general/runtime_cast_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/general/to_string_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/general/typeof_pattern.cpp
-    ${BUNDLE_HOME}/sonia/bang/functional/general/negate_pattern.cpp
-
-
-    ${BUNDLE_HOME}/sonia/bang/semantic/semantic_expression_printer.cpp
-
-    ${BUNDLE_HOME}/sonia/bang/errors/assign_error.cpp
-    ${BUNDLE_HOME}/sonia/bang/errors/circular_dependency_error.cpp
-    ${BUNDLE_HOME}/sonia/bang/errors/function_call_match_error.cpp
-    ${BUNDLE_HOME}/sonia/bang/errors/identifier_redefinition_error.cpp
-    ${BUNDLE_HOME}/sonia/bang/errors/no_position_argument_error.cpp
-    ${BUNDLE_HOME}/sonia/bang/errors/pattern_match_error.cpp
-    ${BUNDLE_HOME}/sonia/bang/errors/type_mismatch_error.cpp
-    ${BUNDLE_HOME}/sonia/bang/errors/value_mismatch_error.cpp
-
-    ${BUNDLE_HOME}/sonia/bang/library/bang_library.cpp
-    ${BUNDLE_HOME}/sonia/bang/vm/bang_vm.cpp
+    
     ${BUNDLE_HOME}/sonia/sal/sal.cpp
     ${BUNDLE_HOME}/sonia/net/uri.cpp
     ${BUNDLE_HOME}/sonia/utility/assert_handler.cpp
@@ -129,16 +33,12 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/utility/iterators/file_region_iterator.cpp
     ${BUNDLE_HOME}/sonia/utility/iterators/tar_iterator.cpp
     ${BUNDLE_HOME}/sonia/utility/iterators/archive_extract_iterator.cpp
-    ${BUNDLE_HOME}/sonia/utility/lua/lua.cpp
-    ${BUNDLE_HOME}/sonia/utility/lua/variant_lib.cpp
-    ${BUNDLE_HOME}/sonia/utility/lua/bigint_lib.cpp
-    ${BUNDLE_HOME}/sonia/utility/lua/sonia_lib.cpp
+    
     ${BUNDLE_HOME}/sonia/utility/invocation/invocable.cpp
     ${BUNDLE_HOME}/sonia/utility/invocation/value_encoder.cpp
     ${BUNDLE_HOME}/sonia/utility/invocation/value_decoder.cpp
     ${BUNDLE_HOME}/sonia/utility/mvvm/view_model.cpp
-    ${BUNDLE_HOME}/sonia/utility/mvvm/lua_view_model.cpp
-    ${BUNDLE_HOME}/sonia/utility/mvvm/bang_view_model.cpp
+    
     ${BUNDLE_HOME}/sonia/utility/xmlbuilder/xmlbuilder.cpp
     ${BUNDLE_HOME}/sonia/utility/xmlbuilder/bunch_builder.cpp
     ${BUNDLE_HOME}/sonia/utility/xmlbuilder/attr_parser.cpp
@@ -164,6 +64,17 @@ set (BUNDLE_SOURCES
     
 )
 
+if (NOT DEFINED NO_LUA)
+    set (BUNDLE_SOURCES ${BUNDLE_SOURCES}
+        ${BUNDLE_HOME}/sonia/utility/lua/lua.cpp
+        ${BUNDLE_HOME}/sonia/utility/lua/variant_lib.cpp
+        ${BUNDLE_HOME}/sonia/utility/lua/bigint_lib.cpp
+        ${BUNDLE_HOME}/sonia/utility/lua/sonia_lib.cpp
+        ${BUNDLE_HOME}/sonia/utility/mvvm/lua_view_model.cpp
+    )
+else()
+    add_definitions(-DSONIA_NO_LUA)
+endif ()
 if (NOT DEFINED NO_NET)
     set (BUNDLE_SOURCES ${BUNDLE_SOURCES}
         ${BUNDLE_HOME}/sonia/net/http/http.cpp
